--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,89 +1,69 @@
+body {
+  text-align: center;
+}
 
-.navbar {
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-  color: #242635;
-  font-family: Source Sans Pro;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-}
-.navbar:hover {
-  background-color: #ddd;
-  color: black;
-}
-.logo{
-  text-align: center;
-  text-decoration: none;
-  color: #242635;
-  font-family: 'Aldrich', sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: -0.25px;
-}
-.topnav{
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 5%;
-  align-items: center;
-}
-h1{
-  color: #242635;
-  font-family: 'Poppins', sans-serif;
-  font-size: 5rem;
-  font-style: normal;
-  font-weight: 500;
-  text-align: center;
-}
-p{
-  text-align: center;
-  color: #242635;
-  text-align: center;
-  font-family: Source Sans Pro;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 400;
-  margin-bottom: 3rem;
-}
-.img_container{
+nav{
+  height:10%;
+  background-color: lightgrey;
+  max-width: 100%;
+  margin-top: 2%;
   display: flex;
   justify-content: center;
 }
-.img_container img {
-  max-width: 90%; 
-  max-height: 90%;
+.visible_btn{
+  background-color: #80669d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
 }
-@media (min-width: 1000px){
-  p {
-    margin: 0 auto 3rem;
-    width: 60%;
-    }
+nav button{
+  margin: 10px;
 }
-@media (min-width: 600px) and (max-width:1000px){
-  h1 {
-    font-size: 3rem;
-    }
-  p {
-    font-size: 1.3rem;
-    margin: 0 auto 2rem;
-    width: 60%;
-    }
+.dropbtn {
+  background-color: #80669d;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
 }
-@media (max-width: 600px){
-  .navbar{
-    font-size: 0.7rem;
-  }
-  .logo{
-    font-size: 1rem;
-  }
-  p {
-    font-size: 0.7rem;
-    margin: 0 auto 2rem;
-    width: 60%;
-    }
-  h1{
-    font-size: 2rem;
-  }
+
+.dropup {
+  position: relative;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+.dropup-content {
+  display: none;
+  position: absolute;
+  background-color: #80669d;
+  min-width: 160px;
+  right: -25px;
+}
+
+.dropup-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropup-content a:hover {
+  background-color: lightblue;
+}
+
+.dropup:hover .dropup-content {
+  display: block;
+  border-radius: 2px;
+}
+
+.dropup:hover .dropbtn {
+  color: lightgray;
+  background-color: lightgray;
+}
+.visible_btn:hover{
+  background-color: lightblue;
 }
